--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -30,7 +30,7 @@ before_script:
 test:
   script:
     - echo $PWD
-    - ls -l ../ 
+    - ls -l ./ 
 
 pages:
   script:
@@ -42,7 +42,7 @@ pages:
   rules:
     - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
 
-# deploy:
-#   stage: deploy
-#   script: echo "Define your deployment script!"
-#   environment: production
+deploy:
+  stage: deploy
+  script: echo "Define your deployment script!"
+  environment: production
