--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,21 +8,6 @@
 # https://hub.docker.com/r/library/python/tags/
 image: python:3-alpine
 
-# Change pip's cache directory to be inside the project directory since we can
-# only cache local items.
-# variables:
-#   PIP_CACHE_DIR: "$CI_PROJECT_DIR/.cache/pip"
-
-# Pip's cache doesn't store the python packages
-# https://pip.pypa.io/en/stable/topics/caching/
-#
-# If you want to also cache the installed packages, you have to install
-# them in a virtualenv and cache it as well.
-# cache:
-#   paths:
-#     - .cache/pip
-#     - venv/
-
 before_script:
   - python --version  # For debugging
   - pip install arrow requests
@@ -30,6 +15,10 @@ before_script:
 pages:
   stage: deploy
   script:
+    - ls -l
+    - ls -l dist
+    - ls -l src
+    - ls -l public
     - python src/fetch-events.py
     - mv dist/events.json public/events.json
   artifacts:
