fix: fix for empty dictionary keys & making all day events when no end date

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,6 @@ services:
     env_file:
       - ./.env
     volumes: 
-      - "./dist:/dist"
+      - "./public:/public"
       - "./src:/src"
     command: ["/usr/bin/tail", "-f", "/dev/null"]
