--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,7 +12,6 @@ env:
   DOMAIN: "${{ vars.DOMAIN }}"
   EVENTS_URI: "${{ vars.EVENTS_URI }}"
   PAST_DAYS: "${{ vars.PAST_DAYS }}"
-  PYTHON_VERSION: "3.11.4"
 
 jobs:
   build:
@@ -25,7 +24,7 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
-        python-version: $PYTHON_VERSION
+        python-version: "3.11.4"
 
     - name: Install dependencies
       run: pip install -r src/requirements.txt 
