--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@ name: Python Script and JSON Deployment
 
 on:
   schedule:
-    - cron: '*/20 * * * *' # Run every 25 minutes
+    - cron: "*/20 * * * *" # Run every 25 minutes
   push:
     branches:
       - main
@@ -31,30 +31,30 @@ env:
 jobs:
   build:
     runs-on: ubuntu-latest
-    
+
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v2
+      - name: Checkout repository
+        uses: actions/checkout@v2
 
-    - name: Set up Python
-      uses: actions/setup-python@v2
-      with:
-        python-version: "3.11.4"
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: "3.11.4"
 
-    - name: Install dependencies
-      run: pip install -r src/requirements.txt 
-      
-    - name: Run Python script
-      run: python src/fetch-events.py 
+      - name: Install dependencies
+        run: pip install -r src/requirements.txt
 
-    - name: Disable jekyll rules for the site
-      run: touch public/.nojekyll
+      - name: Run Python script
+        run: python src/fetch-events.py
 
-    - name: Upload artifact
-      uses: actions/upload-artifact@v4
-      with:
-        path: "public"
-  
+      - name: Disable jekyll rules for the site
+        run: touch public/.nojekyll
+
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
+        with:
+          path: ./dist
+
   # Deployment job
   deploy:
     environment:
@@ -65,4 +65,4 @@ jobs:
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
-        uses: actions/deploy-pages@v2
+        uses: actions/deploy-pages@v4
